--- a/src/Components/Carousel/Carousels.css
+++ b/src/Components/Carousel/Carousels.css
@@ -1,3 +1,9 @@
- .Car {
-     
- }
+.Carousel {
+}
+
+.Carousel__Image {
+  height: 80vh;
+  width: 100vw;
+  object-fit: cover;
+  opacity: 0.9;
+}
