--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -1,5 +1,6 @@
 .Category__Container {
   margin-top: 3rem;
+  height: 60vh;
 }
 
 .Category__Grid {
@@ -8,8 +9,8 @@
   grid-template-rows: auto;
   grid-template-areas: "Batting WicketKeeping Bowling" "Batting Accessories Bowling";
   gap: 2rem;
-  height: 60vh;
-  margin: 15px 35px;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .Category__Grid div {
@@ -28,15 +29,8 @@
   border-radius: 20px;
   object-fit: cover;
 }
-.Category__Batting:hover {
-  opacity: 0.6;
-  transition: 0.5s ease;
-}
-.Batting__Text {
-  background-color: #04aa6d;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
+.Category__Grid div:hover {
+  opacity: 0.8;
 }
 .Category__Bowling {
   grid-area: Bowling;
@@ -64,7 +58,7 @@
 .Category__Accessories img {
   width: 100%;
   height: 100%;
-  border-radius: 20px;
+  border-radius: 1rem;
 }
 h1 {
   text-align: center;
