Removed Logo and Made Carousel Images Darker

--- a/src/Components/Carousel/Carousels.css
+++ b/src/Components/Carousel/Carousels.css
@@ -1,9 +1,10 @@
 .Carousel {
+  background-color: black;
 }
 
 .Carousel__Image {
   height: 80vh;
   width: 100vw;
   object-fit: cover;
-  opacity: 0.9;
+  opacity: 0.5;
 }
