--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,17 +1,16 @@
-.Footer_Container{
-    margin-top: 0.5rem;
-    background-color: black;
+.Footer_Container {
+  margin-top: 0.5rem;
+  background-color: black;
 }
 
-.Footer_Grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    border: 2px solid black;
-    height:60vh;
-
+.Footer_Grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  border: 2px solid black;
+  padding: 2rem;
 }
-.Footer_Grid div{
-    border:2px solid black;
-    text-align: center;
-    color: azure;
+.Footer_Grid div {
+  border: 2px solid black;
+  text-align: center;
+  color: azure;
 }
